[package]
name = "wmiq"
version = "0.1.0"
edition = "2021"
description = "Modern WMI CLI replacement for WMIC"
license = "MIT"

[dependencies]
wmi = "0.14"
clap = { version = "4", features = ["derive"] }
tabled = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
tokio = { version = "1", features = ["full"] }
rustyline = "15"
csv = "1"
